submit question to user
